default fonts and color variables determined

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,13 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+// Our custom colors:
+$sweet-red: #ff3333;
+$lt-coral: #E86A58;
+$bg-beige: #fbf6f4;
+$not-black: #0f1a26;
+$lt-mustard: #FED35B;
+$lt-aqua: #A0D0CC;
+$soft-green: #1BB28C;
+$green-grey: #4A5559;
