--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,28 @@
-// Import Google fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
+// bootstrap defaul - Import Google fonts
+// @import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
+// // bootstrap default fonts
+// $body-font: "Work Sans", "Helvetica", "sans-serif";
+// $headers-font: "Nunito", "Helvetica", "sans-serif";
+
+
+// Our Google Font Selections:
+// Option 1
+// Spectral for headers
+// Karla for body text
+@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,400;1,700&family=Spectral:ital,wght@0,500;0,700;0,800;1,500;1,600;1,700&display=swap');
 
 // Define fonts for body and headers
-$body-font: "Work Sans", "Helvetica", "sans-serif";
-$headers-font: "Nunito", "Helvetica", "sans-serif";
+$body-font: 'Karla', "sans-serif";
+$headers-font: "Spectral", "serif";
+
+
+// Our Google Font Selections
+// Option 2
+// Spectral for headers
+// Karla for body text
+@import url('https://fonts.googleapis.com/css2?family=Halant:wght@300;400;500;600;700&family=Nunito+Sans:ital,wght@0,300;0,400;0,600;0,900;1,300;1,400;1,600;1,900&display=swap');
+$headers-font2: "Halant", "serif";
+$body-font2: "Nunito sans", "sans-serif";
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
