--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,5 @@
-<h2>Sign up</h2>
+<div class="login-form-container">
+<h1>Sign up</h1>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
@@ -8,13 +9,6 @@
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
     <%= f.input :first_name,
                     required: true,
                     autofocus: true,
@@ -24,11 +18,21 @@
                 autofocus: true,
                 input_html: { autocomplete: "last_name" }%>
     <%= f.input :photo, as: :file %>
+    <%= f.input :password,
+                required: true,
+                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                input_html: { autocomplete: "new-password" } %>
+    <%= f.input :password_confirmation,
+                required: true,
+                input_html: { autocomplete: "new-password" } %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+  <div class="form-actions form-btn-wrap d-flex justify-content-around">
+    <%= f.button :submit, "Sign up", class:"btn btn-outline-danger btn-lg" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div class="login-form-link">
+  <%= render "devise/shared/links" %>
+</div>
+</div>
