--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -28,7 +28,7 @@
   </div>
 
   <div class="form-actions form-btn-wrap d-flex justify-content-around">
-    <%= f.button :submit, "Sign up", class:"btn btn-outline-danger btn-lg" %>
+    <%= f.button :submit, "Sign up", class:"btn btn-outline-danger btn-lg btn-block" %>
   </div>
 <% end %>
 
