landing page and navbar modifications

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: #ffffffb6;
   box-shadow: 0 0 10px 0px #ffd1d1;
 }
 
