--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,14 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="body-wrap">
+<div class="container">
+    <div class="header-banner">
+      <h1>Plan your wedding</h1>
+      <p>Let us do the rest for your happily ever after</p>
+      <div class="search__container">
+        <p class="search__title">
+            What would you like to search?
+        </p>
+        <input class="search__input" type="text" placeholder="Search">
+    </div>
+    </div>
+</div>
+</div>
