--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="login-form-container">
 <h2>Change your password</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
@@ -19,9 +20,12 @@
                 input_html: { autocomplete: "new-password" } %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Change my password" %>
+  <div class="form-actions form-btn-wrap d-flex justify-content-around">
+    <%= f.button :submit, "Change my password", class:"btn btn-outline-danger btn-lg btn-block" %>
   </div>
 <% end %>
 
+<div class="login-form-link">
 <%= render "devise/shared/links" %>
+</div>
+</div>
