--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,3 +1,4 @@
+<div class="login-form-container">
 <h2>Forgot your password?</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
@@ -10,9 +11,12 @@
                 input_html: { autocomplete: "email" } %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
+  <div class="form-actions form-btn-wrap d-flex justify-content-around">
+    <%= f.button :submit, "Send me reset password instructions", class:"btn btn-outline-danger btn-lg btn-block" %>
   </div>
 <% end %>
 
+<div class="login-form-link">
 <%= render "devise/shared/links" %>
+</div>
+</div>
