--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,15 @@
   </head>
 
   <body>
+    <%# <div class="body-wrap"> %>
+    
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
-    <div class="container">
+    
+    <%# <div class="container"> %>
     <%= yield %>
-    </div>
+    <%# </div> %>
+    <%# </div> %>
     <%= render 'shared/footer' %>
   </body>
 </html>
