--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -17,8 +17,8 @@
   }
   
   &__title {
-    // font-size: 40px;
-    font-weight: 900;
+    font-size: 30px;
+    // font-weight: 900;
     color: white;
     // text-align: center;
     // color: #ff8b88;
