--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,11 +2,16 @@
 <div class="container">
     <div class="header-banner">
       <h1>Plan your wedding</h1>
-      <p>Let us do the rest for your happily ever after</p>
+      <p>
+      Find everything you need to plan your special day.
+      <br>
+      Waiting for you, all in one place.
+      </p>
+
       <div class="search__container">
-        <p class="search__title">
+        <h5 class="search__title">
             What would you like to search?
-        </p>
+        </h5>
         <input class="search__input" type="text" placeholder="Search">
     </div>
     </div>
