navbar user avatar image shows instead of seb's face at login lol

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,19 +1,15 @@
 <div class="body-wrap">
-<div class="container">
-    <div class="header-banner">
-      <h1>Plan your wedding</h1>
-      <p>
-      Find everything you need to plan your special day.
-      <br>
-      Waiting for you, all in one place.
-      </p>
+	<div class="container">
+		<div class="header-banner">
+			<h1>Plan your wedding</h1>
+			<p>
+			Find everything you need to plan your special day
+			<br>
+			Waiting for you, all in one place.
+			</p>
 
-      <div class="search__container">
-        <h5 class="search__title">
-            What would you like to search?
-        </h5>
-        <input class="search__input" type="text" placeholder="Search">
-    </div>
-    </div>
-</div>
+			<%= render 'shared/searchbar' %>
+			
+		</div>
+	</div>
 </div>
