added logo to footer, fixed footer position

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,7 @@
 <footer>
-  <p>Hello, this is a footer :)</p>
+<div class="d-flex justify-content-around">
+  <div class="avatar-white">
+  <%= image_tag "ringlogo1.svg" %>
+  </div>
+</div>
 </footer>
