home page navbar transparent

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -11,3 +11,13 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
+#homenav {
+  // position: absolute;
+  // top: 0;
+  // background-color:orange;
+  background-color: #ffffff81;
+  box-shadow: 0 0 20px 0px #ffffff81;
+  color: white;
+  width: 100%;
+}
