--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -9,17 +9,20 @@ $bgimg6: url("https://images.unsplash.com/photo-1550257130-f32d770228ac?ixlib=rb
 .body-wrap {
 background-image: $bgimg6;
 background-size: cover;
-background-position: center center;
+background-position: center 47%;
 min-height: 100vh;
 position: relative;
-
+z-index: 0;
 }
 
 // class i want to implement for JUST root path
-.root-nav {
+#homenav {
   position: absolute;
   top: 0;
-  background: #ffffff81;
-  box-shadow: 0 0 10px 0px #969696;
+  z-index: 1;
 }
 
+// #homenav {
+//   opacity: 0.7;
+//   color: white;
+// }
