navbar fixed for vendor and user login

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,6 +3,7 @@ footer {
   color: white;
   padding: 15px;
   background-color: $indian-red;
+  box-shadow: inset 0px 0px 10px 0px rgba(0,0,0,0.75);
   p{
     margin: 0;
   }
