--- a/app/views/user/guests/_form.html.erb
+++ b/app/views/user/guests/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for [@user, @guest] do |f| %>
+<%= simple_form_for [:user, @guest] do |f| %>
   <%= f.input :first_name %>
   <%= f.input :last_name %>
   <%= f.input :phone_number %>
