navbar styling change to wider

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,9 @@
 			<br>
 			Waiting for you, all in one place.
 			</p>
-
+			<h5 class="search__title home-search">
+    What would you like to search?
+  </h5>
 			<%= render 'shared/searchbar' %>
 			
 		</div>
