--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,3 +1,7 @@
+.nav-wrap{
+  width: 90%;
+  margin: 0 auto;
+}
 .navbar-lewagon {
   justify-content: space-between;
   background: #ffffffb6;
@@ -29,7 +33,6 @@
 }
 
 .navbtn{
-  padding: 0 20px;
   :hover{
     background-color: rgba(255, 59, 59, 0.493);
     cursor: pointer;
