--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon" <% if controller.controller_name == "pages" && controller.action_name == "home" %>id="homenav"<%end%>>
-  <div class="container">
+  <div class="content-wrap d-flex justify-content-between">
   <%= link_to "/", class: "navbar-brand" do %>
     <%= image_tag "ringlogo1.svg" %>
     <% end %>
@@ -55,7 +55,7 @@
             <%= link_to "User Login", new_user_session_path, class: "dropdown-item" %>
           </div>
         </li>
-        <h4>❤</h4>
+        <h4> </h4>
         <li class="nav-item dropdown">
           <div class="navbtn" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><h4> Vendor </h4></div>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
@@ -63,7 +63,6 @@
             <%= link_to "Vendor Login", new_vendor_session_path, class: "dropdown-item" %>
           </div>
         </li>
-        
       <% end %>
     </ul>
   </div>
