vendors search index page donw for now

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,7 @@
-.nav-wrap{
-  width: 90%;
-  margin: 0 auto;
-}
+// .nav-wrap{
+//   width: 90%;
+//   margin: 0 auto;
+// }
 .navbar-lewagon {
   justify-content: space-between;
   background: #ffffffb6;
@@ -20,9 +20,6 @@
 }
 
 #homenav {
-  // position: absolute;
-  // top: 0;
-  // background-color:orange;
   background-color: #ffffff81;
   box-shadow: 0 0 20px 0px #ffffff81;
   color: white;
@@ -34,7 +31,15 @@
 
 .navbtn{
   :hover{
-    background-color: rgba(255, 59, 59, 0.493);
+    background-color: rgba(255, 59, 59, 0.61);
     cursor: pointer;
+    &:hover, &:focus{
+    padding: 8px;
+    // background-color: #e4314f;
+    transition: all 250ms ease-in-out;
+    backface-visibility: hidden;
+    border-radius: 50px;
+    color: white;
+  }
   }
 }
