basic vendor show page finished, need to display products

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,17 +1,12 @@
 <div class="body-wrap">
-	<div class="container">
-		<div class="header-banner">
-			<h1>Plan your wedding</h1>
-			<p>
-			Find everything you need to plan your special day
-			<br>
-			Waiting for you, all in one place.
-			</p>
-			<h5 class="search__title home-search">
-    What would you like to search?
-  </h5>
-			<%= render 'shared/searchbar' %>
-			
-		</div>
+	<div class="header-banner">
+		<h1>Plan your wedding</h1>
+		<p>Find everything you need to plan your special day
+		<br>Waiting for you, all in one place.
+		</p>
+		<h5 class="search__title home-search">
+			What would you like to search?
+		</h5>
+		<%= render 'shared/searchbar' %>
 	</div>
 </div>
