--- a/app/assets/stylesheets/components/_search-result-cards.scss
+++ b/app/assets/stylesheets/components/_search-result-cards.scss
@@ -17,7 +17,7 @@
 .vcard-content{
   border-radius: 10px;
   background-color: snow;
-  text-align: justify;
+  text-align: left;
   padding: 8px 12px;
   box-shadow: 0 0 10px 0px #ffd1d1;
 
@@ -25,7 +25,8 @@
       color: $soft-pink;
     }
 
-  h3 {
+  h3, h4 {
+    font-weight: 700;
     margin:0;
     color: $indian-red;
   }
