--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,3 +1,4 @@
 // Import page-specific CSS files here.
 @import "home";
-@import "basic-layouts"
+@import "basic-layouts";
+@import "vendors-show";
