basic user dashboard with favorite vendor list and guest list

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -38,3 +38,10 @@
   background-color: white;
   border: rgba(255, 255, 255, 0.349) 3px solid;
 }
+
+
+.avatar-prof {
+  width: 90%;
+  height: 90%;
+  border-radius: 30%;
+}
