--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -4,6 +4,7 @@
   line-height: 24px;
   padding: 12px 24px;
   transition: transform 250ms ease-in-out;
+  border: none;
   &:hover, &:focus{
     background-color: #e4314f;
     transition: all 250ms ease-in-out;
@@ -22,8 +23,67 @@
   line-height: 24px;
   padding: 12px 24px;
   transition: transform 250ms ease-in-out;
+  border: none;
   &:hover, &:focus{
     background-color: #e43131;
+    transition: all 250ms ease-in-out;
+    backface-visibility: hidden;
+    border-radius: 50px;
+    color: white;
+    text-decoration: none;
+  }
+}
+
+.sha-pink-btn{
+  color: white;
+  background-color: $lt-coral;
+  border-radius: 50px;
+  font-size: 16px;
+  line-height: 16px;
+  padding: 6px 12px;
+  transition: transform 250ms ease-in-out;
+  border: none;
+  &:hover, &:focus{
+    background-color: $coral-pink;
+    transition: all 250ms ease-in-out;
+    backface-visibility: hidden;
+    border-radius: 50px;
+    color: white;
+    text-decoration: none;
+  }
+}
+
+.sha-green-btn {
+  color: white;
+  background-color: #2a9177;
+  border-radius: 50px;
+  font-size: 16px;
+  line-height: 16px;
+  padding: 6px 12px;
+  transition: transform 250ms ease-in-out;
+  border: none;
+  &:hover, &:focus{
+    background-color: $soft-green;
+    transition: all 250ms ease-in-out;
+    backface-visibility: hidden;
+    border-radius: 50px;
+    color: white;
+    text-decoration: none;
+  }
+}
+
+.sha-mustard-btn {
+  text-decoration: none;
+  color: white;
+  background-color: #e9ab26;
+  border-radius: 50px;
+  font-size: 16px;
+  line-height: 16px;
+  padding: 6px 12px;
+  transition: transform 250ms ease-in-out;
+  border: none;
+  &:hover, &:focus{
+    background-color: $md-mustard;
     transition: all 250ms ease-in-out;
     backface-visibility: hidden;
     border-radius: 50px;
