fixed new guest forms

--- a/app/assets/stylesheets/components/_login-form.scss
+++ b/app/assets/stylesheets/components/_login-form.scss
@@ -1,4 +1,4 @@
-.login-form-container {
+.sha-form-container {
   margin: 70px auto;
   width: 500px;
   background-color: white;
@@ -13,7 +13,7 @@
   }
 }
 
-.login-form-link{
+.sha-form-link{
   margin-top: 10px;
   text-align: center;
 }
