--- a/app/views/user/guests/edit.html.erb
+++ b/app/views/user/guests/edit.html.erb
@@ -1,2 +1,4 @@
-<h1>Edit</h1>
-<%= render "form", restaurant: @guest %>
+<div class="sha-form-container">
+<h1>Edit Guest</h1>
+<%= render "form", user: @guest %>
+</div>
