--- a/app/views/user/pages/dashboard.html.erb
+++ b/app/views/user/pages/dashboard.html.erb
@@ -3,8 +3,10 @@
     <div class="col-xs-12 col-md-3">
       <div class="dash-u-sidebar">
       <h1>Welcome, <%= @user.first_name.capitalize %></h1>
-      <div class="dash-user-info">
+      <div class="dash-user-info d-flex justify-content-between">
       <%= image_tag @user.photo, class: "avatar-prof" %>
+      <h3>HMM?</h3>
+      <h3>will this work?</h3>
       </div>
       </div>
     </div>
