--- a/app/assets/stylesheets/pages/_dash-user.scss
+++ b/app/assets/stylesheets/pages/_dash-user.scss
@@ -6,17 +6,19 @@
   // border: 1px solid lightsalmon;
   background-color: white;
   box-shadow: 0 0 10px #ffffff;
-  height: 100%;
+  min-height: 75vh;
   padding: 20px;
 }
 
 .dash-user-info{
   text-align: center;
   color: $green-grey;
+  flex-direction:column;
 }
 
 .dash-u-main{
   // border: 1px solid lightseagreen;
+  min-height: 75vh;
 }
 
 .main-fav, .main-guest {
@@ -24,6 +26,7 @@
   padding: 20px;
   background-color: white;
   box-shadow: 0 0 10px #ffffff;
+  height: 100%;
 }
 
 .fav-vendor-wrap {
