--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="login-form-container">
+<div class="sha-form-container">
 <h1>Sign up as <%= resource_name %></h1>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -32,7 +32,7 @@
   </div>
 <% end %>
 
-<div class="login-form-link">
+<div class="sha-form-link">
   <%= render "devise/shared/links" %>
 </div>
 </div>
