--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,11 @@
 <footer>
 <div class="d-flex justify-content-around">
+  <%= link_to "/" do %>
   <div class="avatar-white">
-  <%= image_tag "ringlogo1.svg" %>
+  
+    <%= image_tag "ringlogo1.svg" %>
+  
   </div>
+  <% end %>
 </div>
 </footer>
