--- a/app/views/user/pages/dashboard.html.erb
+++ b/app/views/user/pages/dashboard.html.erb
@@ -1,7 +1,6 @@
 <%= render 'shared/dash-user-sidebar' %>
 
 <div class="dash-main">
-  <h2>Collapsed Sidebar</h2>
-  <p>Click on the hamburger menu/bar icon to open the sidebar, and push this content to the right.</p>
-
+  <h2>User Dashboard</h2>
+  <p>Box out favorites and Guest list</p>
 </div>
