--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -4,7 +4,7 @@
 // }
 .navbar-lewagon {
   justify-content: space-between;
-  background: #ffffffb6;
+  background: #fcfcfc;
   box-shadow: 0 0 10px 0px #ffd1d1;
     h4{
     margin: 0;
