--- a/app/assets/stylesheets/pages/_dash-vendor.scss
+++ b/app/assets/stylesheets/pages/_dash-vendor.scss
@@ -1,11 +1,13 @@
 .my-products {
   border: 1px solid coral;
   height: 100%;
+  padding: 12px;
 }
 
 .client-messages{
   border: 1px solid rgb(247, 47, 47);
   height: 100%;
+  padding: 12px;
 }
 
 .dash-main {
