Sweet alert 2 implemented

--- a/app/views/shared/_vendor_modal.html.erb
+++ b/app/views/shared/_vendor_modal.html.erb
@@ -29,7 +29,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal" data-action="click->modal#close">Close</button>
-        <button type="button" class="btn btn-primary" data-action="click->modal#createQuote">Save changes</button>
+        <button id="sweet-alert" class="btn btn-primary" type="button" data-action="click->modal#dialog">Save changes</button>
       </div>
     </div>
   </div>
