vendor search needs to be integrated with frontend lol send help

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,7 +5,7 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: #fcfcfc;
-  box-shadow: 0 0 10px 0px #ffd1d1;
+  box-shadow: 0 0 10px 0px #ffdadaab;
     h4{
     margin: 0;
   }
