--- a/app/views/shared/_searchbar.html.erb
+++ b/app/views/shared/_searchbar.html.erb
@@ -6,7 +6,7 @@
           class: "search__input",
           placeholder: "Find a vendor"
         %>
-        <%= f.button :submit, 'Submit', class: "search-btn", wrapper: :inline_form, html: { class: 'form-inline' }%>
+        <%= f.button :submit, 'Search', class: "search-btn", wrapper: :inline_form, html: { class: 'form-inline' }%>
     </div>
   <% end %>
 </div>
