Invoice status implemented for vendor

--- a/app/views/shared/_vendor_modal.html.erb
+++ b/app/views/shared/_vendor_modal.html.erb
@@ -14,6 +14,8 @@
         <p data-target="modal.user_name"></p>
         <h5>Vendor ID</h5>
         <p data-target="modal.vendor_id"></p>
+        <h5>Quote ID</h5>
+        <p data-target="modal.quote_id"></p>
         <div class="form-group">
           <label for="list_of_services">List of services</label>
           <input type="text" class="form-control" id="list_of_services">
