user vendors search index page shows vendors categories to select from, need to link to the queries

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -5,6 +5,7 @@
   padding: 12px 24px;
   transition: transform 250ms ease-in-out;
   border: none;
+  background-color: none;
   &:hover, &:focus{
     background-color: #e4314f;
     transition: all 250ms ease-in-out;
