--- a/app/assets/stylesheets/components/_search-result-cards.scss
+++ b/app/assets/stylesheets/components/_search-result-cards.scss
@@ -13,7 +13,7 @@
 }
 
 .vcard-content{
-  background-color: snow;
+  background-color: white;
   text-align: left;
   padding: 8px 12px;
   box-shadow: 0 0 10px 0px #ffd1d1;
