--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -2,6 +2,36 @@
   padding-top: 40px;
 }
 
+.vendor-search{
+  margin: 0 auto;
+  width: 100%;
+}
+
+.vendor-search-categories{
+  padding-top: 16px;
+  position: sticky;
+  top: 0;
+  text-align: center;
+  background-color: white;
+  h3, h4, h5, p, {
+    font-family: $body-font;
+  }
+
+  p{
+    font-size: 18px;
+  }
+
+  ul{
+    padding: 0;
+  }
+}
+
+.catlist {
+  padding: 10px 0;
+  list-style: none;
+  margin: 0;
+}
+
 .search {
   &__title {
     font-size: 30px;
@@ -40,3 +70,36 @@
   }
 }
 
+.search-btn {
+  color: #e4314f;
+  font-size: 24px;
+  line-height: 24px;
+  padding: 12px 24px;
+  transition: transform 250ms ease-in-out;
+  border: none;
+  background-color: none;
+  &:hover, &:focus{
+    background-color: #e4314f;
+    transition: all 250ms ease-in-out;
+    backface-visibility: hidden;
+    border-radius: 50px;
+    color: white;
+  }
+}
+
+.search-btn2 {
+  color: #e4314f;
+  font-size: 24px;
+  line-height: 24px;
+  padding: 12px 24px;
+  transition: transform 250ms ease-in-out;
+  border: none;
+  background-color: rgba(255, 166, 0, 0);
+  &:hover, &:focus{
+    background-color: #e4314f;
+    transition: all 250ms ease-in-out;
+    backface-visibility: hidden;
+    border-radius: 50px;
+    color: white;
+  }
+}
