--- a/app/views/shared/_vendor_modal.html.erb
+++ b/app/views/shared/_vendor_modal.html.erb
@@ -18,15 +18,15 @@
         <p data-target="modal.quote_id"></p>
         <div class="form-group">
           <label for="list_of_services">List of services</label>
-          <input type="text" class="form-control" id="list_of_services">
+          <input  type="text" class="list_of_services form-control"  data-target="modal.list_of_services" value="">
         </div>
         <div class="form-group">
           <label for="date">Date</label>
-          <input type="date" class="form-control" id="date">
+          <input type="date" class=" date form-control" id="date" data-target="modal.date" value="">
         </div>
         <div class="form-group">
           <label for="total_price">Total price</label>
-          <input type="number" class="form-control" id="total_price">
+          <input type="number" class="total_price form-control" id="total_price" data-target="modal.total_price" value="">
         </div>
       </div>
       <div class="modal-footer">
