user vendor index minor changes, search result cards still not floating sideways..........:(

--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -3,14 +3,15 @@
 }
 
 .vendor-search{
-  margin: 0 auto;
+  margin-left: 18px;
   width: 100%;
 }
 
 .vendor-search-categories{
-  padding-top: 16px;
+  margin: 0 20px;
+  padding-top: 14px;
   position: sticky;
-  top: 0;
+  top: 78px;
   text-align: center;
   background-color: white;
   h3, h4, h5, p, {
