--- a/app/assets/stylesheets/components/_search-result-cards.scss
+++ b/app/assets/stylesheets/components/_search-result-cards.scss
@@ -1,8 +1,14 @@
 .vcard{
+  margin: 0;
   margin-bottom: 30px;
   a {
     text-decoration: none !important;
   }
+  :hover {
+      p, h3, h4 {
+        color: $soft-pink;
+      }
+    }
 }
 
 .vcardimg{
@@ -16,14 +22,14 @@
   background-color: white;
   text-align: left;
   padding: 8px 12px;
-  box-shadow: 0 0 10px 0px #ffd1d1;
+  box-shadow: 0 0 10px 0px #ffdadaab;
 
   :hover {
       color: $soft-pink;
     }
 
   h3, h4 {
-    font-weight: 700;
+    // font-weight: 700;
     margin:0;
     color: $indian-red;
   }
