vendor search is working, able to search by category

--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -16,6 +16,7 @@
   background-color: white;
   h3, h4, h5, p, {
     font-family: $body-font;
+    margin: 0;
   }
 
   p{
@@ -25,10 +26,19 @@
   ul{
     padding: 0;
   }
+  hr{
+    margin-bottom: 0;
+    color: #ffdadaab;
+  }
+  li:hover, :focus {
+    background-color: #ffdadaab;
+    cursor: pointer;
+
+  }
 }
 
 .catlist {
-  padding: 10px 0;
+  padding: 14px 0;
   list-style: none;
   margin: 0;
 }
