--- a/app/assets/stylesheets/pages/_basic-layouts.scss
+++ b/app/assets/stylesheets/pages/_basic-layouts.scss
@@ -15,3 +15,9 @@ footer {
   width: 100%;
   padding: 0 50px;
 }
+
+.dash-main {
+  margin-left: 110px;
+  transition: margin-left .5s;
+  padding: 16px;
+}
