--- a/app/assets/stylesheets/pages/_dash-vendor.scss
+++ b/app/assets/stylesheets/pages/_dash-vendor.scss
@@ -1,18 +1,17 @@
 .my-products {
-  // border: 1px solid coral;
+  border: 1px solid coral;
   height: 100%;
   padding: 20px;
   background-color: white;
 }
 
 .client-messages{
-  // border: 1px solid rgb(247, 47, 47);
+  border: 1px solid rgb(247, 47, 47);
   height: 100%;
   padding: 20px;
   background-color: white;
 }
 
 .dash-main {
-  // border: 1px solid blue;
   margin-top: 20px;
 }
