--- a/app/views/user/favorite_vendors/index.html.erb
+++ b/app/views/user/favorite_vendors/index.html.erb
@@ -17,14 +17,14 @@
       <a href="#" class="sha-mustard-btn">Chat now</a>
       <% if favorite.vendor.quotes.first.booked == 0 %>
         <a href="#" class="btn btn-secondary" >No invoice</a>
-      <% elsif favorite.vendor.quotes.first.booked == 1 %>
+      <% elsif favorite.quote.booked == 1 %>
         <button href="#"
                 class="btn btn-primary"
                 data-action="click->invoice-modal#openModal"
-                data-date="<%= favorite.vendor.quotes.first.date %>"
-                data-list_of_services="<%= favorite.vendor.quotes.first.list_of_services %>"
-                data-total_price="<%= favorite.vendor.quotes.first.total_price %>"
-                data-quote_id="<%= favorite.vendor.quotes.first.id %>">See invoice!</button>
+                data-date="<%= favorite.quote.date %>"
+                data-list_of_services="<%= favorite.quote.list_of_services %>"
+                data-total_price="<%= favorite.quote.total_price %>"
+                data-quote_id="<%= favorite.quote.id %>">See invoice!</button>
       <% else %>
         <a href="#" class="btn btn-success" >Payed</a>
       <% end %>
