vendors show page displays product image carousel

--- a/app/assets/stylesheets/pages/_vendors-show.scss
+++ b/app/assets/stylesheets/pages/_vendors-show.scss
@@ -4,6 +4,10 @@
   background-color: white;
   box-shadow: 0 0 10px 0px #ffdadaab;
   padding: 20px;
+  h1{
+    margin-top: 10px;
+    margin-left: 58px;
+  }
 }
 
 .side-fav-content{
