v dash add my account info

--- a/app/assets/stylesheets/pages/_dash-vendor.scss
+++ b/app/assets/stylesheets/pages/_dash-vendor.scss
@@ -1,3 +1,10 @@
+.my-accountinfo{
+  border: 1px solid greenyellow;
+  height: 100%;
+  padding: 20px;
+  background-color: white;
+}
+
 .my-products {
   border: 1px solid coral;
   height: 100%;
@@ -14,4 +21,8 @@
 
 .dash-main {
   margin-top: 20px;
+}
+
+.vacctinfo-title{
+  margin: 0;
 }
