v dash account info editable on dash

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -46,3 +46,11 @@
   height: 100px;
   border-radius: 50%;
 }
+
+
+.avatar-prof2 {
+  object-fit: cover;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+}
