--- a/app/assets/stylesheets/pages/_dash-vendor.scss
+++ b/app/assets/stylesheets/pages/_dash-vendor.scss
@@ -1,22 +1,20 @@
-.my-accountinfo{
-  border: 1px solid greenyellow;
+.vdash-divbackground {
   height: 100%;
   padding: 20px;
   background-color: white;
+  box-shadow: 0 0 10px 0px #ffdadaab;
+}
+
+.my-accountinfo{
+  border: 1px solid greenyellow;
 }
 
 .my-products {
   border: 1px solid coral;
-  height: 100%;
-  padding: 20px;
-  background-color: white;
 }
 
 .client-messages{
   border: 1px solid rgb(247, 47, 47);
-  height: 100%;
-  padding: 20px;
-  background-color: white;
 }
 
 .dash-main {
