v dash layouts done for now

--- a/app/assets/stylesheets/pages/_dash-vendor.scss
+++ b/app/assets/stylesheets/pages/_dash-vendor.scss
@@ -6,15 +6,15 @@
 }
 
 .my-accountinfo{
-  border: 1px solid greenyellow;
+  // border: 1px solid greenyellow;
 }
 
 .my-products {
-  border: 1px solid coral;
+  // border: 1px solid coral;
 }
 
 .client-messages{
-  border: 1px solid rgb(247, 47, 47);
+  // border: 1px solid rgb(247, 47, 47);
 }
 
 .dash-main {
@@ -23,4 +23,8 @@
 
 .vacctinfo-title{
   margin: 0;
+}
+
+.prod-name {
+  margin-bottom: 10px;
 }
