--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -133,6 +133,27 @@
   }
 }
 
+.sha-grey-btn {
+  text-decoration: none;
+  color: white;
+  background-color: #8a8a8a;
+  border-radius: 50px;
+  font-size: 12px;
+  line-height: 12px;
+  padding: 4px 8px;
+  transition: transform 250ms ease-in-out;
+  border: none;
+  &:hover, &:focus{
+    background-color: #b8b8b8;
+    transition: all 250ms ease-in-out;
+    backface-visibility: hidden;
+    border-radius: 50px;
+    color: white;
+    text-decoration: none;
+  }
+}
+
+
 .sha-btn-md {
   font-size: 16px;
   line-height: 16px;
